# LogAnomalyDetect

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.py  dev.ipynb  dev.py  dev.txt  environ_variables_temp.sh  pre-commit-config.yaml  pyproject.toml  requirements.txt  run_setup.sh  setup.py  text.txt  workflow.txt
.github/workflows/: run_test.yml
EDA Notebook/: log_anomaly EDA .ipynb
development/: clean_dev.gzip  clean_test.gzip  data_dev.ipynb  dev.ipynb  devscript.py  new_dev.ipynb  preprocess.py  text.xml  train_dev.ipynb
models/: practice-a.ipynb
models/1D CNN/: 1DCNN.py
notebooks/: EDA_analysis.ipynb  log_anomaly EDA .ipynb  log_anomaly_EDA .ipynb
outputs/2023-07-17/15-22-56/.hydra/: config.yaml  (+1 more)
src/: __init__.py  dataset.py  dataset_loader.py  dev.py  download_data.py  evalute.py  logger.py  main.py  test.py  train.py  utils.py
src/conf/: config.yaml  new.yaml
src/config/: config.yaml
src/data_code/: load_data.py  preprocess.py  text.py
src/dataprep/: load_data.py  main.py  preprocess.py
src/dataset/: data_loader.py  data_split.py  data_transform.py  dataset_loader.py  download_data.py
src/loganomalydetect/: dataset_loader.py  download_data.py  evalute.py  main.py
src/loganomalydetect/config/: config.yaml
src/loganomalydetect/models/: baseline_cnn.py
src/models/: 1DCNN.py  GRU.py  TCN.py  baseline_cnn.py  model_loader.py  temporal_cn.py
src/pipeline/: model.py  train.py
src/tests/: test_data.py  test_model.py
src/utils/: common_utils.py  logger.py  logging.py  utils.py
tests/: test_data.py  test_model.py
(+21 files in other folders)
