[tool.poetry]
name = "log_anaomly"
version = "0.1.0"
description = ""
authors = ["Ipadeola Ladipo"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
polars = "^0.18.5"
nltk = "^3.8.1"
seaborn = "^0.12.2"
yellowbrick = "^1.5"
pyarrow = "^12.0.1"
fastparquet = "^2023.7.0"
nvidia-cudnn-cu11 = "8.6.0.163"
tensorflow = "2.12"
mlflow = "^2.4.1"
tensorflow-io = "^0.32.0"
hydra-core = "^1.3.2"
loguru = "^0.7.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''